# plexydesk-0.5-depricated-codebase

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  ChangeLog  README  TODO  common.pri  config.h.cmake  deploy.pri  index.html  installer.nsi  make_nsis_installer.cmake  make_nsis_installer.nsi  make_win32_installer.bat  org.plexydesk.daemon.service.in  params.json  plexydesk.Doxyfile.cmake  plexydesk.pro  plexydeskqmlwidget.h
artwork/icons/crystal/: CMakeLists.txt
artwork/themepacks/bb10/: CMakeLists.txt  layout.xml  main.cfg
artwork/themepacks/default/: .main.cfg.swp  CMakeLists.txt  default.pro  layout.xml  main.cfg
base/core/: CMakeLists.txt  abstractdesktopview.cpp  abstractdesktopview.h  abstractdesktopwidget.cpp  abstractdesktopwidget.h  abstractplugininterface.cpp  abstractplugininterface.h  abstractsource.h  backdropinterface.cpp  backdropinterface.h  backdropplugin.h  baseplugin.h  controllerinterface.cpp  controllerinterface.h  controllerplugininterface.cpp  controllerplugininterface.h  datainterface.h  dataplugin.h  dataplugininterface.cpp  dataplugininterface.h  datasource.cpp  datasource.h  debug.h  desktopviewplugin.h  desktopviewplugininterface.cpp  desktopviewplugininterface.h  imagecache.cpp  imagecache.h  pendingjob.cpp  pendingjob.h  plexy.h  plexyconfig.cpp  plexyconfig.h  pluginloader.cpp  pluginloader.h  svgprovider.cpp  svgprovider.h  viewcontrollerplugin.cpp  viewcontrollerplugin.h  widgetinterface.h  (+2 more)
base/qt4/: CMakeLists.txt  abstractdesktopview.cpp  abstractdesktopview.h  abstractdesktopwidget.cpp  abstractdesktopwidget.h  abstractplugininterface.h  backdropinterface.cpp  backdropinterface.h  backdropplugin.cpp  backdropplugin.h  baseplugin.h  baserender.cpp  baserender.h  button.cpp  button.h  canvas.cpp  canvas.h  datainterface.h  dataplugin.h  debug.h  desktopview.cpp  desktopview.h  desktopviewplugin.h  desktopwidget.cpp  desktopwidget.h  extensionfactory.cpp  extensionfactory.h  fakemime.cpp  fakemime.h  frameitem.cpp  frameitem.h  httpjobhandler.cpp  httpjobhandler.h  icon.cpp  icon.h  iconjob.cpp  iconjob.h  iconprovider.cpp  iconprovider.h  imagecache.cpp  (+51 more)
base/qt4/shaders/: CMakeLists.txt  qmlshadersplugin_plugin.cpp  shadereffect.cpp  shadereffect.h  shadereffectbuffer.cpp  shadereffectbuffer.h  shadereffectitem.cpp  shadereffectitem.h  shadereffectsource.cpp  shadereffectsource.h  shaders.pro  shaders_global.h  src.pro
extensions/backdrop/classicdrop/: CMakeLists.txt  backdrop.cpp  backdrop.h  backdropitem.cpp  backdropitem.h  classic.desktop  classicbackgroundrender.cpp  classicbackgroundrender.h  classicdrop.pro  classicinterface.cpp  classicinterface.h  customproxy.cpp  customproxy.h  pictureflow.cpp  pictureflow.h
extensions/backdrop/mac_background/: CMakeLists.txt  mac_background.cpp  mac_background.h  macbginterface.cpp  macbginterface.h  macdesktop.desktop
extensions/data/bbconn/: CMakeLists.txt  bbconn.cpp  bbconn.desktop  bbconn.h  bbconninterface.cpp  bbconninterface.h  client.cpp  client.h  connection.cpp  connection.h  peermanager.cpp  sslclient.cpp  sslclient.h  sslserver.cpp  sslserver.h
extensions/data/cvwebcam/: CMakeLists.txt  webcam.cpp  webcam.desktop  (+3 more)
modules/QtWin/: CMakeLists.txt  utils.h  workspace.h
modules/fbjson/: CMakeLists.txt  facebooksession.cpp  facebooksession.h  fbjson.pro  json_global.h  jsonhandler.cpp
modules/libplexyirc/: CMakeLists.txt  irc.cpp  irc.h  user.h
panel/: CMakeLists.txt  main.cpp  plexypanel.cpp  plexypanel.h
plexycore/qt4/: CMakeLists.txt  abstractplugininterface.cpp  abstractplugininterface.h  abstractpluginloder.h  backdropfactory.cpp  backdropfactory.h  backdropinterface.cpp  backdropinterface.h  backdropplugin.cpp  backdropplugin.h  baseplugin.cpp  baseplugin.h  baserender.cpp  baserender.h  canvas.cpp  canvas.h  datainterface.h  dataplugin.cpp  dataplugin.h  desktopview.cpp  desktopview.h  desktopwidget.cpp  desktopwidget.h  extensionfactory.cpp  extensionfactory.h  fakemime.cpp  fakemime.h  frameitem.cpp  frameitem.h  navigator.cpp  navigator.h  netwm.cpp  netwm.h  netwm_def.h  netwm_p.h  plexyconfig.cpp  plexyconfig.h  pluginloader.cpp  pluginloader.h  viewlayer.cpp  (+8 more)
plexyfrens/: CMakeLists.txt  desktopview.cpp  desktopview.h  main.cpp  plexypanel.cpp
plexylib/: CMakeLists.txt  debug.h  particle.cpp  particle.h  plexy.h  springsystem.h  vector3d.cpp  vector3d.h
plexylib/fbjson/: CMakeLists.txt  jsonhandler.cpp  jsonhandler.h
plexylib/json/: .jsonhandler.cpp.swp  CMakeLists.txt  jsonhandler.cpp
plexylib/src/: CMakeLists.txt  shadereffectitem.cpp  shadereffectitem.h
plexywm/: .compwindow.h.swp  CMakeLists.txt  compwindow.cpp  compwindow.h  main.cpp  plexywindow.cpp  plexywindow.h  plexywindows.cpp  plexywindows.h  windowmanager.cpp  windowmanager.h
runner/: CMakeLists.txt  XAtoms.h  bbmobileui.cpp  bbmobileui.h  canvas.cpp  canvas.h  desktopbaseui.cpp  desktopbaseui.h  desktopview.cpp  desktopview.h  icon.cpp  icon.h  iconjob.cpp  iconjob.h  iconprovider.cpp  iconprovider.h  main.cpp  main.mm  main_bb10.cpp  openglscene.cpp  openglscene.h  plexydesk.cmake.desktop  plexyeventhandler.cpp  plexyeventhandler.h  plexypanel.cpp  plexypanel.h  plexytray.h  plexywindow.cpp  plexywindow.h  point3d.h  runner.pro  themepackloader.cpp  themepackloader.h
runner/test/: CMakeLists.txt  testicon.cpp  testicon.h
social/: CMakeLists.txt  daemon.cpp  daemon.h  main.cpp  org.plexydesk.social.service.in
social/accountsmanager/: CMakeLists.txt  account.cpp  account.h  accountmanager.cpp  accountmanager.h  main.cpp  org.plexydesk.SocialAccountsManager.service.in  storagelayer.cpp  storagelayer.h  storagelayerinterface.h
widgets/qt4/: CMakeLists.txt  abstractplugininterface.h  abstractpluginloder.h  backdropfactory.cpp  backdropfactory.h  backdropinterface.h  baserender.cpp  baserender.h  datainterface.h  desktopview.cpp  desktopview.h  desktopwidget.cpp  desktopwidget.h  extensionfactory.cpp  extensionfactory.h  netwm.cpp  netwm.h  netwm_p.h  plexyconfig.cpp  plexyconfig.h  pluginloader.cpp  pluginloader.h  widgetfactory.cpp  widgetfactory.h  widgetinterface.h
(+545 files in other folders)
